fix: compress img

--- a/prepros.config
+++ b/prepros.config
@@ -936,6 +936,237 @@
           },
           "customOutput": "css/style.css"
         }
+      },
+      {
+        "file": "images/bottom-bg.png",
+        "config": {
+          "originalSize": 1824751,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/chelsea-logo.png",
+        "config": {
+          "originalSize": 140014,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/gradient.png",
+        "config": {
+          "originalSize": 1824770,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/home-banner.jpg",
+        "config": {
+          "originalSize": 755911,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/icons/football.svg",
+        "config": {
+          "originalSize": 3294,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/icons/projects.svg",
+        "config": {
+          "originalSize": 1286,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/icons/telegram.svg",
+        "config": {
+          "originalSize": 1376,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/icons/vk.svg",
+        "config": {
+          "originalSize": 1968,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/icons/youtube.svg",
+        "config": {
+          "originalSize": 646,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/mobile-bg-top.png",
+        "config": {
+          "originalSize": 432904,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/mobile-bg.png",
+        "config": {
+          "originalSize": 562319,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/poster/1.jpg",
+        "config": {
+          "originalSize": 516038,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/poster/10.jpg",
+        "config": {
+          "originalSize": 283457,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/poster/2.jpg",
+        "config": {
+          "originalSize": 348536,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/poster/3.jpg",
+        "config": {
+          "originalSize": 236196,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/poster/4.jpg",
+        "config": {
+          "originalSize": 350248,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/poster/5.jpg",
+        "config": {
+          "originalSize": 286361,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/poster/6.jpg",
+        "config": {
+          "originalSize": 327845,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/poster/7.jpg",
+        "config": {
+          "originalSize": 390575,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/poster/8.jpg",
+        "config": {
+          "originalSize": 358691,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/poster/9.jpg",
+        "config": {
+          "originalSize": 400998,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/top-bg.png",
+        "config": {
+          "originalSize": 1824754,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/who-are-we.jpg",
+        "config": {
+          "originalSize": 868959,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/who-are-we/1.jpg",
+        "config": {
+          "originalSize": 163072,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/who-are-we/2.jpg",
+        "config": {
+          "originalSize": 140604,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/who-are-we/3.jpg",
+        "config": {
+          "originalSize": 129800,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/who-are-we/4.jpg",
+        "config": {
+          "originalSize": 138607,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/who-are-we/5.jpg",
+        "config": {
+          "originalSize": 98594,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/who-are-we/6.jpg",
+        "config": {
+          "originalSize": 122438,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/who-are-we/7.jpg",
+        "config": {
+          "originalSize": 168315,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/who-are-we/8.jpg",
+        "config": {
+          "originalSize": 99797,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/who-are-we/sertificate.png",
+        "config": {
+          "originalSize": 141577,
+          "optimized": true
+        }
+      },
+      {
+        "file": "images/whoAreCard.png",
+        "config": {
+          "originalSize": 208334,
+          "optimized": true
+        }
       }
     ]
   }
